--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Employee-Index
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/bashdb
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=12345
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
