--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,7 +18,7 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
 
-    - name: Build with Maven
+    - name: Build project with Maven
       run: mvn clean package
 
     - name: Set up Docker Buildx
@@ -33,11 +33,6 @@ jobs:
     - name: Build Docker image
       run: docker build -t ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest .
 
-    - name: Push to DockerHub
+    - name: Push Docker image to DockerHub
       run: docker push ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest
 
-    - name: Deploy with Docker Compose
-      run: |
-        docker-compose down || true
-        docker-compose pull
-        docker-compose up -d
