--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Employee-Index
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/bashdb
-spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.username=DataDBA
+spring.datasource.password=DataDBA@123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
