--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,17 +29,14 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
-        run: |
-          IMAGE_TAG=$(git rev-parse --short HEAD)
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/springapp:$IMAGE_TAG .
+        run: docker build -t springapp .
 
       - name: Push Docker Image
         run: |
-          IMAGE_TAG=$(git rev-parse --short HEAD)
-          docker push ${{ secrets.DOCKER_USERNAME }}/springapp:$IMAGE_TAG
+          docker tag springapp nikhil874/springapp:latest
 
       - name: Run Docker Compose (optional, only works if hosted runner has Docker Compose)
-        run: docker-compose up -d --build
+        run: docker-compose up -d
 
  
 
