--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Docker
 on:
   push:
     branches:
-      - main  # or your deployment branch
+      - main
 
 jobs:
   build-and-deploy:
@@ -31,12 +31,10 @@ jobs:
       - name: Build Docker Image
         run: docker build -t springapp .
 
-      - name: Push Docker Image
+      - name: Tag and Push Docker Image
         run: |
           docker tag springapp nikhil874/springapp:latest
+          docker push nikhil874/springapp:latest
 
-      - name: Run Docker Compose (optional, only works if hosted runner has Docker Compose)
+      - name: Run Docker Compose (optional)
         run: docker-compose up -d
-
- 
-
